elb.tf
resource "aws_lb" "web" {
 name               = "web-alb"
 internal           = false
 load_balancer_type = "application"
 security_groups    = [aws_security_group.web.id]
 subnets            = [aws_subnet.public_a.id, aws_subnet.public_b.id]


 enable_deletion_protection = false
}


resource "aws_lb_listener" "web" {
 load_balancer_arn = aws_lb.web.arn
 port              = "80"
 protocol          = "HTTP"


 default_action {
   type             = "forward"
   target_group_arn = aws_lb_target_group.web.arn
 }
}


resource "aws_lb_target_group" "web" {
 name     = "web-targets"
 port     = 80
 protocol = "HTTP"
 vpc_id   = aws_vpc.main.id


 health_check {
   interval            = 30
   path                = "/"
   timeout             = 5
   healthy_threshold   = 5
   unhealthy_threshold = 2
   protocol            = "HTTP"
 }
}


resource "aws_autoscaling_attachment" "asg_attachment" {
 autoscaling_group_name = aws_autoscaling_group.web.id
 lb_target_group_arn    = aws_lb_target_group.web.arn
}
