route_table.tf
resource "aws_route_table" "public" {
 vpc_id = aws_vpc.main.id


 route {
   cidr_block = "0.0.0.0/0"
   gateway_id = aws_internet_gateway.main.id
 }


 tags = {
   Name = "public-route-table"
 }
}


resource "aws_route_table_association" "public_a" {
 subnet_id      = aws_subnet.public_a.id
 route_table_id = aws_route_table.public.id
}


resource "aws_route_table_association" "public_b" {
 subnet_id      = aws_subnet.public_b.id
 route_table_id = aws_route_table.public.id
}
